# rust_arkitect

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/acme_project/: Cargo.toml  lib.rs
examples/sample_project/: Cargo.toml
examples/sample_project/src/: architecture_rules_test.rs  lib.rs
examples/workspace_project/: Cargo.toml
examples/workspace_project/application/: Cargo.toml
examples/workspace_project/contracts/: Cargo.toml
examples/workspace_project/conversion/: Cargo.toml
examples/workspace_project/policy_management/: Cargo.toml
examples/zentrix_project/: Cargo.toml  lib.rs
sample_project/: Cargo.toml
sample_project/src/: architecture_rules_test.rs  lib.rs
sample_project/src/conversion/: mod.rs  (+3 more)
src/: arkitect.rs  builder.rs  builtin_rules.rs  dependency_parsing.rs  dsl.rs  dsl2.rs  engine.rs  lib.rs  parser.rs  rule.rs  rules.rs  rust_file.rs  rust_project.rs  utils.rs  validation.rs
src/builtin_rules/: may_depend_on.rs  must_not_depend_on.rs  must_not_depend_on_anything.rs  utils.rs
src/dsl/: architectural_rules.rs  arkitect.rs  mod.rs  project.rs
src/dsl_v2/: architectural_rules.rs  arkitect.rs  project.rs
src/rules/: may_depend_on.rs  mod.rs  must_not_depend_on.rs  must_not_depend_on_anything.rs  must_not_have_circular_dependencies.rs  rule.rs  rule_v2.rs  utils.rs
tests/: architecture_rules_test.rs  dependency_visitor_test.rs  test_architecture.rs  test_custom_rule_usage_in_dsl.rs  test_standalone_rules_usage.rs
tests/sample_project/: application.rs  dependency_rules.rs  domain.rs  mod.rs
(+21 files in other folders)
