[package]
name = "rust_arkitect"
version = "0.0.4"
authors = ["Patrick Luca Fazzi <patrick91@live.it>"]
edition = "2021"
description = "rust_arkitect is a lightweight library for defining and validating architectural rules in Rust projects"
license = "MIT"
repository = "https://github.com/pfazzi/rust_arkitect"
readme = "README.md"
keywords = ["architecture", "fitness-functions"]
categories = ["development-tools"]

[package.metadata.release]
publish = true
allow-branch = ["main"]

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
ansi_term = "0.12"
env_logger = "0.11"
log = "0.4.22"